# OptionsVisualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  pyproject.toml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
app/: app.py  constants.py  helpers.py  requirements.txt  styles.py
include/OptionsVisualizer/Grid/: Enums.hpp  Grid.hpp
include/OptionsVisualizer/core/: Enums.hpp  OptionManager.hpp  OptionsManager.hpp  arrayUtils.hpp  globals.hpp  linspace.hpp
include/OptionsVisualizer/greeks/: GreeksResult.hpp  greeks_result.hpp
include/OptionsVisualizer/greeks/bsm/: calculate_greeks.hpp
include/OptionsVisualizer/greeks/trinomial/: calculate_greeks.hpp
include/OptionsVisualizer/greeks/trinomial/details/: PricingParams.hpp  american_price.hpp  calculate_greeks.hpp  constants.hpp  helpers.hpp
include/OptionsVisualizer/grid/: Dims.hpp  OptionGrid.hpp  calculate_greeks.hpp  calculate_grids.hpp  index.hpp  price_grid.hpp
include/OptionsVisualizer/lru/: LRUCache.hpp  Params.hpp  ParamsHash.hpp
include/OptionsVisualizer/math/: central_difference.hpp  generic_math.hpp
include/OptionsVisualizer/models/: GreeksResult.hpp  black_scholes_merton.hpp  bsm_greeks.hpp  constants.hpp  trinomial.hpp  trinomial_greeks.hpp  trinomial_price.hpp
include/OptionsVisualizer/models/trinomial/: calculate_price.hpp  constants.hpp  helpers.hpp
include/OptionsVisualizer/models/trinomial/internal/: calculate_price.hpp  constants.hpp  helpers.hpp
include/OptionsVisualizer/module/: module.hpp
include/OptionsVisualizer/option/: AmericanCall.hpp  AmericanPut.hpp  Call.hpp  EuropeanCall.hpp  EuropeanPut.hpp  Option.hpp  Put.hpp
include/OptionsVisualizer/params/: PricingParams.hpp  PricingParamsHash.hpp
include/OptionsVisualizer/payoff/: Call.hpp  Payoff.hpp  Put.hpp
include/OptionsVisualizer/pricing/: GreeksResult.hpp  PricingParams.hpp  PricingSurface.hpp
include/OptionsVisualizer/server/: HeatMapController.hpp
include/OptionsVisualizer/utils/: compare_floats.hpp  typing.hpp
python/: requirements.txt
python/src/: app.py  callbacks.py  config.py  main.py  mappings.py  panels.py  plotting.py  services.py  slider.py  validate.py
python/tests_gen/: black_scholes.py  enums.py  tests_generator.py  trinomial.py
src/: main.cpp  module.cpp  placeholder.cpp
src/Grid/: GreeksResult.cpp  Grid.cpp
src/Grid/bsm/: calculate_greeks.cpp
src/Grid/trinomial/: calculate_greeks.cpp
src/Grid/trinomial/internal/: calculate_price.cpp  helpers.cpp
src/core/: OptionManager.cpp  OptionsManager.cpp  linspace.cpp
src/greeks/: GreeksResult.cpp
src/greeks/bsm/: calculate_greeks.cpp
src/greeks/trinomial/: calculate_greeks.cpp
src/greeks/trinomial/details/: PricingParams.cpp  american_price.cpp  calculate_greeks.cpp  helpers.cpp
src/grid/: calculate_grids.cpp  index.cpp
src/lru/: LRUCache.cpp  Params.cpp  ParamsHash.cpp
src/models/bsm/: calculate_greeks.cpp
src/models/trinomial/: calculate_greeks.cpp
src/models/trinomial/internal/: calculate_price.cpp  helpers.cpp
src/params/: PricingParams.cpp  PricingParamsHash.cpp
src/pricing/: GreeksResult.cpp  PricingParams.cpp  PricingSurface.cpp
src/server/: HeatMapController.cpp
tests/: CMakeLists.txt  align_files.hpp  options_surface_test.cpp  pricing_module_tests.cpp  pricing_test.cpp  read_csv.hpp  read_data.hpp  validate_results.cpp
